Adding some info for a couple intro/opening slides

--- a/slides/reveal.js-master/index.html
+++ b/slides/reveal.js-master/index.html
@@ -31,12 +31,22 @@
                     </p>
                 </section>
                 <section>
-                    <h2>
-                        Overview
-                    </h2>
+                    <h2>Why this presentation?</h2>
+                    <img src="http://vignette1.wikia.nocookie.net/harrypotter/images/e/e6/Tumblr_n0lq3f9gci1qdd90po8_r1_250.gif/revision/latest?cb=20140403212816" />
                     <ul>
-                        <li>...</li>
-                        <li>...</li>
+                        <li>Poor APIs can strangle productivity</li>
+                        <li>Many intelligent engineers don't always think in terms of APIs</li>
+                        <li>Daily design decisions have long-reaching impacts</li>
+                    </ul>
+                </section>
+                <section>
+                    <h2>Why Should You Consider Listening to Us?</h2>
+                    <ul>
+                        <li>Software Architects within Revenue Cycle Scheduling</li>
+                        <li>Dustin: 6 years @ Cerner</li>
+                        <li>Brandon: 9.5 years @ Cerner</li>
+                        <li>Reviewed/Refactored/Designed A LOT of code for a rapidly growing organization</li>
+                        <li>Passionate about clean code, API design, and being good code citizens in general</li>
                     </ul>
                 </section>
                 <section>
