--- a/slides/reveal.js-master/index.html
+++ b/slides/reveal.js-master/index.html
@@ -9,6 +9,9 @@
         <link rel="stylesheet" href="css/reveal.css">
         <link rel="stylesheet" href="css/theme/moon.css">
 
+        <!-- Custom CSS used to tweak theme -->
+        <link rel="stylesheet" href="css/custom.css">
+
         <!-- Theme used for syntax highlighting of code -->
         <link rel="stylesheet" href="lib/css/zenburn.css">
 
@@ -40,21 +43,33 @@
                     </ul>
                 </section>
                 <section>
+                    <h2>Goals</h2>
+                    <ul>
+                        <li>Discuss API designs which complicate/restrict ability to grow your code base</li>
+                        <li>Provide passive transition paths for some* of these scenarios</li>
+                        <li>Provide ACTIONABLE information that can be utilized IMMEDIATELY following the presentation</li>
+                    </ul>
+                    <br />
+                    <br />
+                    <small>* Only <em>some</em> of these scenarios, as we are unfortunately not wizards</small>
+                </section>
+                <section>
                     <h2>Why Should You Consider Listening to Us?</h2>
                     <ul>
-                        <li>Software Architects within Revenue Cycle Scheduling</li>
-                        <li>Dustin: 6 years @ Cerner</li>
-                        <li>Brandon: 9.5 years @ Cerner</li>
-                        <li>Reviewed/Refactored/Designed A LOT of code for a rapidly growing organization</li>
+                        <li>Software Architects with a combined tenure of 15+ years</li>
+                        <li>
+                            Designed/Reviewed/Refactored A LOT of code for a rapidly growing organization
+                            <ul>
+                                <li>...and experienced the pain associated with such rapid growth</li>
+                            </ul>
+                        </li>
                         <li>Passionate about clean code, API design, and being good code citizens in general</li>
                     </ul>
                 </section>
                 <section>
                     <section data-background-color="#4d7e65">
                         <h2>Inflexible/Rigid APIs</h2>
-                        <p>
-                            Find some image or gif to include on section transition slides...
-                        </p>
+                        <img src="http://i.imgur.com/elnwfL2.png" height=350 width=350 />
                     </section>
                     <section>
                         <h2>Inflexible/Rigid APIs</h2>
@@ -63,15 +78,13 @@
                             <li>...we can have a bulleted list slide with some details that we'll touch on in the code slides that follow</li>
                         </ul>
                     </section>
-                    <section>
+                    <section data-state='slide-with-code'>
                         <h2>Bad Example</h2>
                         <pre>
-                            <!-- Only use contenteditable if we actually want to be able to modify text during the presentation. Note that it does not support undo capability, so unintentional modifications would be not-so-good -->
-                            <code data-trim data-noescape contenteditable="true">
+                            <code data-trim data-noescape>
 public interface AppointmentManager
 {
-    // List<AppointmentCriteria> assumes order is needed, but what if you're just iterating 
-    // over elements
+    // List<AppointmentCriteria> assumes order is needed, but what if you're just iterating over elements
     List<Appointment> createAppointments(List<AppointmentCriteria> criteria);
 }
                             </code>
